<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rectangle_background"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_verde_aceptado"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_check_circle"/>

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@id/titulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/titulo"
            android:layout_marginRight="10dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="@color/white"
            />

        <TextView
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/paypal_pago_pago_exitoso"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/titulo"/>
        <TextView
            android:id="@+id/precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/paypal_pago_pago_correc"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/telefono"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/precio"/>

        <TextView
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:text="@string/paypal_pago_pago_farm"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/divider"

            />
        <TextView
            android:id="@+id/dir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:text="@string/paypal_pago_pago_colonia"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/descripcion"/>

        <TextView
            android:id="@+id/tlf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:text="@string/paypal_pago_pago_tel"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/dir"

            />

        <ImageView
            android:id="@+id/qr"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:padding="10dp"
            android:src="@drawable/qr1"
            app:layout_constraintTop_toBottomOf="@id/tlf"/>

        <Button
            android:id="@+id/terminar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/boton_azul"
            android:gravity="center"
            android:text="OK"
            android:textColor="@color/white"
            app:backgroundTint="@color/color_verde_aceptado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qr" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>